--- a/lang/stack.yaml
+++ b/lang/stack.yaml
@@ -1,5 +1,36 @@
 flags: {}
 packages:
 - '.'
-extra-deps: []
-resolver: lts-3.5
+extra-deps:
+- MonadRandom-0.4
+- adjunctions-4.2.2
+- base-orphans-0.4.4
+- bifunctors-5.1
+- binary-bits-0.5
+- comonad-4.2.7.2
+- contravariant-1.3.3
+- data-default-0.5.3
+- data-default-class-0.0.1
+- data-default-instances-base-0.0.1
+- data-default-instances-containers-0.0.1
+- data-default-instances-dlist-0.0.1
+- data-default-instances-old-locale-0.0.1
+- distributive-0.4.4
+- dlist-0.7.1.2
+- either-4.4.1
+- free-4.12.1
+- haskell-lexer-1.0
+- kan-extensions-4.2.3
+- lens-4.13
+- mmorph-1.0.4
+- monad-control-1.0.0.4
+- prelude-extras-0.4.0.2
+- pretty-show-1.6.9
+- profunctors-5.1.1
+- reflection-2.1
+- semigroupoids-5.0.0.4
+- semigroups-0.18.0.1
+- tagged-0.8.2
+- transformers-base-0.4.4
+- void-0.7.1
+resolver: ghc-7.10.2
