[WIP] Dokumentacja użytkownika

--- a/docs/dok_uzytk/main.tex
+++ b/docs/dok_uzytk/main.tex
@@ -2,10 +2,13 @@
 \usepackage[utf8]{inputenc}
 \usepackage{polski}
 \usepackage{graphicx}
+\usepackage[section]{placeins}
 \usepackage{caption}
+\usepackage{gensymb}
 \usepackage{subcaption}
 \usepackage[a4paper,width=150mm,top=25mm,bottom=25mm,bindingoffset=6mm]{geometry}
 \usepackage{fancyhdr}
+\usepackage{listings}
 \pagestyle{fancy}
 \fancyhead{}
 \fancyhead[RO,LE]{Thesis Title}
@@ -15,7 +18,6 @@
 \fancyfoot[CO,RE]{Author Name}
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0.4pt}
-
 \title{Thesis Title}
 \author{Author Name}
 \date{Day Month Year}	
