--- a/docs/dok_uzytk/main.tex
+++ b/docs/dok_uzytk/main.tex
@@ -1,6 +1,8 @@
 \documentclass[12pt,twoside]{report}
 \usepackage[utf8]{inputenc}
 \usepackage{polski}
+\usepackage{mathtools}
+\DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
 \usepackage{graphicx}
 \usepackage[section]{placeins}
 \usepackage{caption}
@@ -11,11 +13,11 @@
 \usepackage{listings}
 \pagestyle{fancy}
 \fancyhead{}
-\fancyhead[RO,LE]{Thesis Title}
+\fancyhead[RO,LE]{System przetwarzania danych wektorowych oparty na układzie FPGA}
 \fancyfoot{}
 \fancyfoot[LE,RO]{\thepage}
-\fancyfoot[LO,CE]{Chapter \thechapter}
-\fancyfoot[CO,RE]{Author Name}
+\fancyfoot[LO,CE]{Rozdział \thechapter}
+\fancyfoot[CO,RE]{Dyczek, Moczurad}
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0.4pt}
 \title{Thesis Title}
