--- a/docs/dok_proc/titlepage.tex
+++ b/docs/dok_proc/titlepage.tex
@@ -1,28 +1,28 @@
 \begin{titlepage}
     \begin{center}
-
-        \textbf{Akademia Górniczo-Hutnicza im. Stanisława Staszica w Krakowie}
-        \rule{\textwidth}{1pt}\par
+		\fontsize{17pt}{20pt}\selectfont
+        \textbf{Akademia Górniczo-Hutnicza\\im. Stanisława Staszica w Krakowie}
+        \rule{\textwidth}{1.5pt}\par
         \vspace{0.5cm}
         Wydział Informatyki, Elektroniki i Telekomunikacji
         
         \vspace{1.5cm}
 
-        \includegraphics[scale=0.5]{images/agh}
+        \includegraphics[scale=0.75]{images/agh}
  		
  		\vspace{1.5cm}
  		
  		Dokumentacja procesowa
  		
  		\vspace{0.5cm}
-	 	\textbf{Sprzętowo-programowy system przetwarzania danych wektorowych, oparty na ukladzie FPGA}
+	 	\textbf{Sprzętowo-programowy system\\przetwarzania danych wektorowych,\\oparty na ukladzie FPGA}
 		
 		Piotr Moczurad
 		Tomasz Dyczek
-		
-		Opiekun
+		\vspace{1.5cm}\\
+		\textbf{Opiekun}\\
 		dr inż. Jacek Długopolski
-		\rule{\textwidth}{1pt}\par
+		\rule{\textwidth}{1.5pt}\par
 		Kraków 2015
 		
         
