--- a/docs/dok_uzytk/main.tex
+++ b/docs/dok_uzytk/main.tex
@@ -11,6 +11,7 @@
 \usepackage[a4paper,width=150mm,top=25mm,bottom=25mm,bindingoffset=6mm]{geometry}
 \usepackage{fancyhdr}
 \usepackage{listings}
+\linespread{1.3}
 \pagestyle{fancy}
 \fancyhead{}
 \fancyhead[RO,LE]{System przetwarzania danych wektorowych oparty na układzie FPGA}
