--- a/docs/dok_uzytk/main.tex
+++ b/docs/dok_uzytk/main.tex
@@ -7,6 +7,7 @@
 \usepackage[section]{placeins}
 \usepackage{caption}
 \usepackage{gensymb}
+\usepackage{float}
 \usepackage{subcaption}
 \usepackage[a4paper,width=150mm,top=25mm,bottom=25mm,bindingoffset=6mm]{geometry}
 \usepackage{fancyhdr}
@@ -29,11 +30,20 @@
 	\input{titlepage}
 	\tableofcontents	
 	
+	\chapter{Wstęp}
+	\input{chapters/zero}
+	
 	\chapter{Instrukcja użytkownika}
     \input{chapters/one}
 
-    \chapter{Zastosowanie systemu w rzeczywistych problemach obliczeniowych}
+    \chapter{Przykłady zastosowania procesora w problemach obliczeniowych}
     \input{chapters/two}
+    	
+	\chapter{Podsumowanie}
+	\input{chapters/allinall}    	
+    	
+    	%Bibliografia
+    \input{chapters/three}
 
 	
 \end{document}
