Final touches by Tomek

--- a/docs/dok_uzytk/main.tex
+++ b/docs/dok_uzytk/main.tex
@@ -19,7 +19,7 @@
 \fancyfoot{}
 \fancyfoot[LE,RO]{\thepage}
 \fancyfoot[LO,CE]{Rozdział \thechapter}
-\fancyfoot[CO,RE]{Dyczek, Moczurad}
+\fancyfoot[CO,RE]{Tomasz Dyczek, Piotr Moczurad}
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0.4pt}
 \title{Thesis Title}
