--- a/docs/przewodnik/main.tex
+++ b/docs/przewodnik/main.tex
@@ -8,12 +8,13 @@
 \usepackage{fancyhdr}
 \usepackage[nottoc,numbib]{tocbibind}
 \pagestyle{fancy}
+\linespread{1.3}
 \fancyhead{}
-\fancyhead[RO,LE]{Thesis Title}
+\fancyhead[RO,LE]{Sprzętowo-programowy system przetwarzania danych wektorowych}
 \fancyfoot{}
 \fancyfoot[LE,RO]{\thepage}
-\fancyfoot[LO,CE]{Chapter \thechapter}
-\fancyfoot[CO,RE]{Author Name}
+\fancyfoot[LO,CE]{Rozdział \thechapter}
+\fancyfoot[CO,RE]{Tomasz Dyczek, Piotr Moczurad}
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0.4pt}
 
