--- a/docs/dok_tech/main.tex
+++ b/docs/dok_tech/main.tex
@@ -1,4 +1,4 @@
-	\documentclass[12pt,twoside]{report}
+\documentclass[12pt,twoside]{report}
 \usepackage[utf8x]{inputenc}
 \usepackage{polski}
 \usepackage{graphicx}
@@ -6,12 +6,13 @@
 \usepackage{subcaption}
 \usepackage[a4paper,width=150mm,top=25mm,bottom=25mm,bindingoffset=6mm]{geometry}
 \usepackage{fancyhdr}
+\usepackage[nottoc,numbib]{tocbibind}
 \pagestyle{fancy}
 \fancyhead{}
 \fancyhead[RO,LE]{Sprzętowo-programowy system przetwarzania danych wektorowych}
 \fancyfoot{}
 \fancyfoot[LE,RO]{\thepage}
-\fancyfoot[LO,CE]{Chapter \thechapter}
+\fancyfoot[LO,CE]{Rozdział \thechapter}
 \fancyfoot[CO,RE]{Tomasz Dyczek, Piotr Moczurad}
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0.4pt}
