--- a/docs/dok_tech/titlepage.tex
+++ b/docs/dok_tech/titlepage.tex
@@ -12,7 +12,7 @@
  		
  		\vspace{1.5cm}
  		
- 		Dokumentacja procesowa
+ 		Dokumentacja techniczna
  		
  		\vspace{0.5cm}
 	 	\textbf{Sprzętowo-programowy system\\przetwarzania danych wektorowych,\\oparty na ukladzie FPGA}
