--- a/docs/przewodnik/main.tex
+++ b/docs/przewodnik/main.tex
@@ -6,6 +6,7 @@
 \usepackage{subcaption}
 \usepackage[a4paper,width=150mm,top=25mm,bottom=25mm,bindingoffset=6mm]{geometry}
 \usepackage{fancyhdr}
+\usepackage{scrextend}
 \usepackage[nottoc,numbib]{tocbibind}
 \pagestyle{fancy}
 \linespread{1.3}
@@ -24,6 +25,7 @@
 
 \begin{document}
 	\input{titlepage}
+	\input{chapters/disclaimer}
 	\tableofcontents
 	
 	\chapter{Cel pracy i wizja produktu}
