--- a/docs/dok_tech/titlepage.tex
+++ b/docs/dok_tech/titlepage.tex
@@ -15,11 +15,15 @@
  		Dokumentacja techniczna
  		
  		\vspace{0.5cm}
-	 	\textbf{Sprzętowo-programowy system\\przetwarzania danych wektorowych,\\oparty na ukladzie FPGA}
+	 	\textbf{Sprzętowo-programowy system\\przetwarzania danych wektorowych,\\oparty na ukladzie FPGA}\\
+	 	\vspace{0.5cm}
+		(The FPGA based hardware/software vector data\\ processing system)
 		
-		Piotr Moczurad
+		\vspace{1cm}
+
+		Piotr Moczurad \hspace{2cm}
 		Tomasz Dyczek
-		\vspace{1.5cm}\\
+		\vspace{1cm}\\
 		\textbf{Opiekun}\\
 		dr inż. Jacek Długopolski
 		\rule{\textwidth}{1.5pt}\par
