--- a/docs/przewodnik/titlepage.tex
+++ b/docs/przewodnik/titlepage.tex
@@ -9,17 +9,18 @@
         \vspace{1.5cm}
 
         \includegraphics[scale=0.75]{images/agh}
- 		
- 		\vspace{1.5cm}
- 		
+
  		Przewodnik
  		
  		\vspace{0.5cm}
-	 	\textbf{Sprzętowo-programowy system\\przetwarzania danych wektorowych,\\oparty na ukladzie FPGA}
+	 	\textbf{Sprzętowo-programowy system\\przetwarzania danych wektorowych,\\oparty na ukladzie FPGA}\\
+		(The FPGA based hardware/software vector data\\ processing system)
 		
-		Piotr Moczurad
+		\vspace{0.5cm}
+
+		Piotr Moczurad \hspace{2cm}
 		Tomasz Dyczek
-		\vspace{1.5cm}\\
+		\vspace{0.5cm}\\
 		\textbf{Opiekun}\\
 		dr inż. Jacek Długopolski
 		\rule{\textwidth}{1.5pt}\par
