--- a/docs/dok_uzytk/main.tex
+++ b/docs/dok_uzytk/main.tex
@@ -12,6 +12,7 @@
 \usepackage[a4paper,width=150mm,top=25mm,bottom=25mm,bindingoffset=6mm]{geometry}
 \usepackage{fancyhdr}
 \usepackage{listings}
+\usepackage[nottoc,numbib]{tocbibind}
 \linespread{1.3}
 \pagestyle{fancy}
 \fancyhead{}
