Nowy, ostatni tytuł

--- a/docs/przewodnik/titlepage.tex
+++ b/docs/przewodnik/titlepage.tex
@@ -1,30 +1,26 @@
 \begin{titlepage}
     \begin{center}
-		\fontsize{17pt}{20pt}\selectfont
-        \textbf{Akademia Górniczo-Hutnicza\\im. Stanisława Staszica w Krakowie}
-        \rule{\textwidth}{1.5pt}\par
+
+        \includegraphics[scale=0.75]{images/agh}\\
         \vspace{0.5cm}
-        Wydział Informatyki, Elektroniki i Telekomunikacji
-        
-        \vspace{1.5cm}
-
-        \includegraphics[scale=0.75]{images/agh}
-
- 		Przewodnik
- 		
- 		\vspace{0.5cm}
-	 	\textbf{Sprzętowo-programowy system\\przetwarzania danych wektorowych,\\oparty na ukladzie FPGA}\\
-		(The FPGA based hardware/software vector data\\ processing system)
-		
+		\textbf{WYDZIAŁ INFORMATYKI, ELEKTRONIKI I TELEKOMUNIKACJI}\\
 		\vspace{0.5cm}
+		KATEDRA INFORMATYKI\\
+		\vspace{2.5cm}
+		PROJEKT INŻYNIERSKI\\
+		\vspace{1cm}
+	 	\textbf{Sprzętowo-programowy system przetwarzania danych wektorowych,\\oparty na ukladzie FPGA}\\
+	 	\vspace{0.5cm}
+		The FPGA based hardware/software vector data\\ processing system\\
+		\vspace{3cm}
+		Autor:\hfill Piotr Moczurad, Tomasz Dyczek\\
+		\vspace{0.25cm}
+		Kierunek studiów:\hfill Informatyka\\
+		\vspace{0.25cm}
+		Opiekun pracy:\hfill dr inż. Jacek Długopolski\\
+		\vfill		
+		Kraków, 2016
 
-		Piotr Moczurad \hspace{2cm}
-		Tomasz Dyczek
-		\vspace{0.5cm}\\
-		\textbf{Opiekun}\\
-		dr inż. Jacek Długopolski
-		\rule{\textwidth}{1.5pt}\par
-		Kraków 2015
 		
         
     \end{center}
